syntax = "proto3";

package go_microservice_grpc;

option go_package="/proto/package/binance_service";

message KlineData {
    optional int64 openTime = 1;
    optional double open = 2;
    optional double high = 3;
    optional double low = 4;
    optional double close = 5;
    optional double volume = 6;
    optional int64 closeTime = 7;
}

message GetKlinesBySymbolRequest {
    int64 endTime = 1;
    int32 limit = 2;
    string symbol = 3;
    string interval = 4;
}

message GetKlinesBySymbolResponse {
    repeated KlineData data = 1;
}

service BinanceService {
    rpc GetKlinesBySymbol(GetKlinesBySymbolRequest) returns (GetKlinesBySymbolResponse) {}
}