syntax = "proto3";

package go_microservice_grpc;

option go_package="/proto/hello_service";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
    rpc SayHelloServerStream(HelloRequest) returns (stream HelloResponse) {}
    rpc SayHelloClientStream(stream HelloRequest) returns (HelloResponse) {}
    rpc SayHelloBidirectionalStream(stream HelloRequest) returns (stream HelloResponse) {}
}